# gptrust

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
gpt/: Cargo.toml  README.md
gptionary/: Cargo.toml  README.md  pictionary.txt
gptionary/src/: main.rs
gptrust_api/: Cargo.toml  README.md
gptrust_api/src/: audio.rs  chat.rs  completions.rs  edits.rs  engines.rs  files.rs  images.rs  lib.rs  models.rs
gptrust_cli/: Cargo.toml  README.md
gptrust_cli/src/: cli.rs  main.rs  utils.rs
gptrust_http/: Cargo.toml
gptrust_http/src/: http.rs  lib.rs  openai_http.rs
gptrust_http/src/openai_http/: get.rs  mod.rs  post.rs
gptrust_proxy/: Cargo.toml
gptrust_proxy/src/: main.rs
gptx/: Cargo.toml  README.md
gptx/src/: main.rs
libgptrustpy/: Cargo.toml  README.md
libgptrustpy/py/: chatter.py
libgptrustpy/src/: lib.rs
