[package]
name = "gptrust"
version = "0.1.0"
edition = "2021"
authors = ["kousiknandy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gptrust_proxy"
path = "gptrust_proxy/src/main.rs"

[dependencies]

gptrust_api = { path = "gptrust_api" }
tokio = { version = "1", features = ["full"] }


