[package]
name = "gptionary"
version = "0.1.0"
description = "Console based pictionary using gpt image api"
authors = ["Kousik Nandy <kousiknandy@gmail.com>"]
repository = "https://github.com/gptrust/gptrust"
license = "MIT"
keywords = ["gpt", "gptapi"]
categories = ["api-bindings", "command-line-utilities"]
edition = "2021"


[dependencies]

tokio = { version = "1", features = ["full"] }
gptrust_api = { path = "../gptrust_api", version = "0.1.4" }
gptrust_http = { path = "../gptrust_http", version = "0.1.4" }
rand = { version = "0.8.5" }
