[package]
name = "gptrust_api"
description = "Rust binding of OpenAI/GPT-3 API"
version = "0.1.3"
authors = ["Kousik Nandy <kousiknandy@gmail.com>"]
repository = "https://github.com/gptrust/gptrust"
license = "MIT"
keywords = ["gpt", "gptapi"]
categories = ["api-bindings", "command-line-utilities"]
edition = "2021"


[dependencies]
gptrust_http = { path = "../gptrust_http", version = "0.1.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
