[package]
name = "gptrust_cli"
version = "0.1.0"
edition = "2021"
authors = ["kousiknandy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gptrust_api = { path = "../gptrust_api" }
tokio = { version = "1", features = ["full"] }
clap_derive = { version = "=4.0.21" }
clap_lex = { version = "=0.3.0" }
clap = { version = "=4.0.32", features = ["derive"] }
