[package]
name = "gptrust_cli"
description = "A CLI interface to invoke gptrust_api"
version = "0.1.4"
authors = ["Kousik Nandy <kousiknandy@gmail.com>"]
repository = "https://github.com/gptrust/gptrust"
license = "MIT"
keywords = ["gpt", "gptapi"]
categories = ["api-bindings", "command-line-utilities"]
edition = "2021"


[dependencies]

gptrust_api = { path = "../gptrust_api", version = "0.1.4" }
tokio = { version = "1", features = ["full"] }
clap_derive = { version = "=4.0.21" }
clap_lex = { version = "=0.3.0" }
clap = { version = "=4.0.32", features = ["derive"] }
gptrust_http = { path = "../gptrust_http", version = "0.1.4" }
