[package]
name = "gptrust_http"
description = "The HTTP bindings for gptrust_api"
version = "0.1.3"
authors = ["Kousik Nandy <kousiknandy@gmail.com>"]
repository = "https://github.com/gptrust/gptrust"
license = "MIT"
keywords = ["gpt", "gptapi"]
categories = ["api-bindings", "command-line-utilities"]
edition = "2021"


[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5.0" }
