[package]
name = "gptrust_proxy"
description = "A forward proxy for gptrust_api (WIP)"
version = "0.1.0"
authors = ["Kousik Nandy <kousiknandy@gmail.com>"]
repository = "https://github.com/gptrust/gptrust"
license = "MIT"
keywords = ["gpt", "gptapi"]
categories = ["api-bindings", "command-line-utilities"]
edition = "2021"


[dependencies]

gptrust_api = { path = "../gptrust_api" }
tokio = { version = "1", features = ["full"] }

