[package]
name = "gptx"
version = "0.1.0"
description = "Unix like text pipe through gpt (openai API)"
authors = ["Kousik Nandy <kousiknandy@gmail.com>"]
repository = "https://github.com/gptrust/gptrust"
license = "MIT"
keywords = ["gpt", "gptapi"]
categories = ["api-bindings", "command-line-utilities"]
edition = "2021"


[dependencies]

tokio = { version = "1", features = ["full"] }
gptrust_api = { path = "../gptrust_api", version = "0.1.4" }